Add authorization for all url API routes
