# docs/swagger.yaml
@@ -1,3 +1,4 @@
+basePath: /
 definitions:
   apiv1.UrlRequest:
     properties:
@@ -34,8 +35,12 @@ definitions:
     - password
     - username
     type: object
+host: 127.0.0.1:8080
 info:
   contact: {}
+  description: This is documentation for redirect engine admin API
+  title: URL management API
+  version: "1.0"
 paths:
   /api/v1/url:
     get:
@@ -48,6 +53,8 @@ paths:
             items:
               $ref: '#/definitions/models.Url'
             type: array
+      security:
+      - ApiKeyAuth: []
       summary: Get urls list
   /api/v1/url/:
     post:
@@ -67,6 +74,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/apiv1.UrlRequest'
+      security:
+      - ApiKeyAuth: []
       summary: Create new url
   /api/v1/url/{id}:
     delete:
@@ -83,6 +92,8 @@ paths:
           description: ok
           schema:
             type: string
+      security:
+      - ApiKeyAuth: []
       summary: Delete an existing url
     get:
       consumes:
@@ -100,6 +111,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/apiv1.UrlRequest'
+      security:
+      - ApiKeyAuth: []
       summary: Get a single url
     put:
       consumes:
@@ -123,6 +136,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/apiv1.UrlRequest'
+      security:
+      - ApiKeyAuth: []
       summary: Update an existing url
   /auth:
     post:
@@ -140,4 +155,9 @@ paths:
           description: OK
           schema:
             type: object
+securityDefinitions:
+  ApiKeyAuth:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
